# observability_test

./: .gitignore  .pylintrc  create_media.py  demo_optimization_results.npz  environment.yml  estimator.py  jax_test.py  main.py  mc.ipynb  optimization.py  planar_robot_control_experiment.py  pyproject.toml  quadrotor_control_experiment.py  state_estimation_experiment.py  stlog_evaluation_experiment.py  stlog_test.py  test_stlog.py
config/: optimcfg.py  planar_robot_control_experiment.toml  quadrotor_control_experiment.toml  state_estimation_experiment.toml  stlog_evaluation_experiment.toml
docker/: Dockerfile  entrypoint.sh
models/: models.py
observability_test_small/: __init__.py  gramian_small.py
src/models/: __init__.py  model_base.py  models.py
src/models/autodiff/: __init__.py  models.py  multi_planar_robot.py  multi_quadrotor.py
src/models/symbolic/: models.py  planar_robot.py  quadrotor.py
src/observability_aware_control/: __init__.py
src/observability_aware_control/algorithms/: __init__.py  algorithms.py  common.py  cooperative_localization.py  numlog.py  opc.py  stlog.py
src/observability_aware_control/models/: __init__.py  model_base.py  multi_quadrotor.py  multi_robot.py  quadrotor.py  robot.py  rotation.py  sensors.py
src/observability_aware_control/optimize/: __init__.py  minimize.py  minimize_problem.py
src/observability_aware_control/planning/: __init__.py  helpers.py  (+1 more)
src/utils/: minimize_problem.py  optim_plotter.py
tests/: test_algorithms.py
tests/internal/: algorithms.py
three_drones/: __init__.py  three_drones.py
(+21 files in other folders)
